@@ -1,6 +1,16 @@
 *********************************************************************************************
 *                                  CHANGE LOG 1.0.0 - > 2.0.0                               *
 *********************************************************************************************
+ * (10/30/2010)
+  	 #138
+  	 	ADDED   : Added option for adding a Menu Item separator - http://juigle.origo.ethz.ch/issues/4
+ 
+ * (10/29/2010)
+  	 #135
+  	 	ADDED   : Class ErrorCodes which contains static variables with all JUIGLE's error codes.
+  	 	CHANGED : Errors properties now not contains errors caused by PluginEngine. PluginEngine 2.0 has now own errors codes.
+  	 	ADDED   : A new method for write actual CLASSPATH. Added to the class JUIGLEFileUtils.java.
+  	 	
  * (10/17/2010)
   	 #133
   	 	CHANGED : Switched version of the SwingX library from 1.6.0 to 1.6.2
@@ -9,6 +19,7 @@
   * (10/06/2010)
   	 #124
   	 	CHANGED : #ISSUE 19: automatic filling of error code to the error text - http://juigle.origo.ethz.ch/issues/19
+  	 	ADDED   : Added target for generating Javadoc by ANT build.xml
   
   * (10/03/2010)
   	 #119, 116
